--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@vben-core/shared": "workspace:*",
     "@vben-core/typings": "workspace:*",
+    "dayjs": "catalog:",
     "vue-router": "catalog:"
   }
 }
