refactor(access): 移除登录过期状态和相关代码
- 删除loginExpired字段及其setter方法
- 移除LoginExpiredModeType类型声明
- 删除authPageLayout及loginExpiredMode偏好配置
- 移除authentication相关视图、组件及国际化文案
- 删除多个登录相关UI组件包括验证码登录、忘记密码、登录过期弹窗等
- 移除钉钉登录相关代码
- 删除authentication布局切换组件
- 清理相关依赖和导出
- 移除登录页面URL常量
- 调整vite插件配置，去除license插件
- 新增时间显示组件导出

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vben-admin-monorepo",
-  "version": "5.5.9",
+  "name": "oms",
+  "version": "1.0.0",
   "private": true,
   "keywords": [
     "monorepo",
@@ -14,15 +14,7 @@
     "vue vben admin pro",
     "vue3"
   ],
-  "homepage": "https://github.com/vbenjs/vue-vben-admin",
-  "bugs": "https://github.com/vbenjs/vue-vben-admin/issues",
   "repository": "vbenjs/vue-vben-admin.git",
-  "license": "MIT",
-  "author": {
-    "name": "vben",
-    "email": "ann.vben@gmail.com",
-    "url": "https://github.com/anncwb"
-  },
   "type": "module",
   "scripts": {
     "build": "pnpm run build --filter=@vben/web-ele",
