feat(utils): 优化时区Cookie操作，使用js-cookie库
- 引入js-cookie库替代原生document.cookie操作
- 简化获取Cookie时区的代码逻辑，提高可靠性
- 使用js-cookie设置Cookie时区，处理过期时间更简洁
- 在package.json中添加js-cookie及其类型声明依赖
- 在pnpm-lock.yaml中更新相关依赖版本及锁定信息

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -23,6 +23,10 @@
     "@vben-core/shared": "workspace:*",
     "@vben-core/typings": "workspace:*",
     "dayjs": "catalog:",
+    "js-cookie": "^3.0.5",
     "vue-router": "catalog:"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
